--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,4 +18,7 @@ body {
   color: black;
   background: white;
   font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
