--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,8 +17,15 @@
 body {
   color: black;
   background: white;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 20px;
+  margin: 0;
+}
+
+form, canvas {
+  margin: 20px;
+  padding: 20px;
 }
